--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -8,7 +8,8 @@
 
 general {
         colors = true
-        interval = 5
+	color_good = "#F08D0C"
+	interval = 5
 }
 
 order += "wireless _first_"
@@ -28,9 +29,10 @@ battery 0 {
 		format = "%status %percentage"   // %remaining %emptytime"
 		format_down = "No battery"
 		
-		status_chr = "   "
-		status_bat = "  "
-		status_full = "  "
+		status_chr = "   "
+		status_bat = "   "
+		status_unk = " "
+		status_full = "  "
 		path = "/sys/class/power_supply/BAT%d/uevent"		
 		low_threshold = 10
 		last_full_capacity = true
@@ -40,13 +42,13 @@ battery 0 {
 
 
 tztime local {
-        format = "  %I:%M %p | %a (%d)-%b (%m)"
+        format = "  %I:%M %p |  %a (%d)-%b (%m)"
 }
 
 
 volume master {
         format = ": %volume"
-        format_muted = ": muted (%volume)"
+        format_muted = ": muted (%volume)"
         device = "default"
         mixer = "Master"
         mixer_idx = 0
