--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -29,9 +29,9 @@ battery 0 {
 		format = "%status %percentage"   // %remaining %emptytime"
 		format_down = "No battery"
 		
-		status_chr = "   "
-		status_bat = "   "
-		status_unk = " "
+		status_chr = "   "
+		status_bat = "   "
+		status_unk = "? ukwn "
 		status_full = "  "
 		path = "/sys/class/power_supply/BAT%d/uevent"		
 		low_threshold = 10
