--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -1,3 +1,31 @@
+
+
+###########
+# General #
+###########
+
+#save-position-on-quit
+no-border                               # no window title bar
+msg-module                              # prepend module name to log messages
+msg-color                               # color log messages on terminal
+term-osd-bar                            # display a progress bar on the terminal
+use-filedir-conf                        # look for additional config files in the directory of the opened file
+pause                                   # no autoplay
+keep-open                               # keep the player open when a file's end is reached
+autofit-larger=100%x95%                 # resize window in case it's larger than W%xH% of the screen
+deinterlace=auto                        # 'auto' does not imply interlacing-detection
+cursor-autohide-fs-only                 # don't autohide the cursor in window mode, only fullscreen
+input-media-keys=no                     # enable/disable OSX media keys
+cursor-autohide=1000                    # autohide the curser after 1s
+
+#screenshot-format=png
+#screenshot-png-compression=8
+#screenshot-template='~/Desktop/%F (%P) %n'
+
+hls-bitrate=400                         # use max quality for HLS streams
+ytdl-format=bestvideo[height<=?400][fps<=?30][vcodec!=?vp9][protocol!=http_dash_segments]+bestaudio/best #[protocol!=http_dash_segments][protocol!=rtmp]
+
+
 # the following options only apply to subtitles without own styling (i.e. not ASS but e.g. SRT)
 sub-font="Consolas"
 #"Cantarel"
@@ -9,3 +37,21 @@ sub-border-size=0
 sub-shadow-offset=0
 #sub-shadow-color="#33000000"
 sub-spacing=0.5
+
+#############
+# OSD / OSC #
+#############
+
+osd-level=1                             # enable osd and display --osd-status-msg on interaction
+osd-duration=2500                       # hide the osd after x ms
+osd-status-msg='${time-pos} / ${duration}${?percent-pos:　(${percent-pos}%)}${?frame-drop-count:${!frame-drop-count==0:　Dropped: ${frame-drop-count}}}\n${?chapter:Chapter: ${chapter}}'
+
+osd-font='Cantarell'
+osd-font-size=15
+osd-color='#CCFFFFFF'                   # ARGB format
+osd-border-color='#DD322640'            # ARGB format
+#osd-shadow-offset=1                    # pixel width for osd text and progress bar
+osd-bar-align-y=1                       # progress bar y alignment (-1 top, 0 centered, 1 bottom)
+osd-border-size=1                       # size for osd text and progress bar
+osd-bar-h=1                             # height of osd bar as a fractional percentage of your screen height
+osd-bar-w=60                            # width of " " "
