--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -22,11 +22,29 @@ cursor-autohide=1000                    # autohide the curser after 1s
 #screenshot-png-compression=8
 #screenshot-template='~/Desktop/%F (%P) %n'
 
-hls-bitrate=400                         # use max quality for HLS streams
+hls-bitrate=400                         # --hls-bitrate=<no|min|max|<rate>> 
 ytdl-format=bestvideo[height<=?400][fps<=?30][vcodec!=?vp9][protocol!=http_dash_segments]+bestaudio/best #[protocol!=http_dash_segments][protocol!=rtmp]
+
+#########
+# Cache #
+#########
+
+cache=yes
+cache-default=5000000                   # size in KB
+cache-backbuffer=25000                  # size in KB
+cache-initial=0                         # start playback when your cache is filled up with x kB
+cache-secs=10                           # how many seconds of audio/video to prefetch if the cache is active
+
+##########################
+######Subs###############
+#########################
+
 
 
 # the following options only apply to subtitles without own styling (i.e. not ASS but e.g. SRT)
+#
+#
+#
 sub-font="Consolas"
 #"Cantarel"
 #"Ubuntu Mono"
