--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -27,11 +27,11 @@ ytdl-format=bestvideo[height<=?400][fps<=?30][vcodec!=?vp9][protocol!=http_dash_
 # Cache #
 #########
 
-cache=yes
-cache-default=5000000                   # size in KB
-cache-backbuffer=25000                  # size in KB
-cache-initial=0                         # start playback when your cache is filled up with x kB
-cache-secs=10                           # how many seconds of audio/video to prefetch if the cache is active
+#cache=yes
+#cache-default=5000000                   # size in KB
+#cache-backbuffer=25000                  # size in KB
+#cache-initial=0                         # start playback when your cache is filled up with x kB
+#cache-secs=10                           # how many seconds of audio/video to prefetch if the cache is active
 
 ##########################
 ######Subs###############
