--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -20,8 +20,8 @@ order += "tztime local"
 wireless _first_ {
 	#	format_up = " [%essid ]"       
 	#	format_down = " [down]"
-	 format_up = ": On: %essid "   //(%quality at %essid) %ip"
-	 format_down = "Wifi: down"
+	 format_up = "[  ]: On: %essid "   //(%quality at %essid) %ip"
+	 format_down = "[  ]  Wifi: down"
 }
 
 
@@ -29,10 +29,10 @@ battery 0 {
 		format = "%status %percentage"   // %remaining %emptytime"
 		format_down = "No battery"
 		
-		status_chr = "   "
-		status_bat = "   "
-		status_unk = "? ukwn "
-		status_full = "  "
+		status_chr = "[  ]  "
+		status_bat = "[   ]"
+		status_unk = "[? ukwn ] "
+		status_full = " [  ]"
 		path = "/sys/class/power_supply/BAT%d/uevent"		
 		low_threshold = 10
 		last_full_capacity = true
@@ -47,8 +47,8 @@ tztime local {
 
 
 volume master {
-        format = ": %volume"
-        format_muted = ": muted (%volume)"
+        format = "[  ]: %volume"
+        format_muted = "[  ]: muted (%volume)"
         device = "default"
         mixer = "Master"
         mixer_idx = 0
