--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -8,8 +8,8 @@
 
 general {
         colors = true
-	color_good = "#F08D0C"
-	interval = 5
+		color_good = "#00e6ac" #"#33cc3"    #"#F08D0C"
+		interval = 5
 }
 
 order += "wireless _first_"
