netctl.service disabled..

--- a/wifi-netctl-systemd/wifi_intint.conf
+++ b/wifi-netctl-systemd/wifi_intint.conf
@@ -1,7 +1,7 @@
 netctl-auto@.service                         enabled  
 netctl-ifplugd@.service                      disabled 
 netctl-sleep.service                         disabled 
-netctl.service                               enabled  
+netctl.service                               disabled    #still works  
 netctl@.service                              static   
 netctl@1001101101101110011.service           static   
 netctl@wlp2s0\x2d1001101101101110011.service static   
