--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -27,8 +27,8 @@ ytdl-format=bestvideo[height<=?400][fps<=?30][vcodec!=?vp9][protocol!=http_dash_
 # Cache #
 #########
 
-#cache=yes
-#cache-default=5000000                   # size in KB
+cache=no
+#cache-default=50000                   # size in KB
 #cache-backbuffer=25000                  # size in KB
 #cache-initial=0                         # start playback when your cache is filled up with x kB
 #cache-secs=10                           # how many seconds of audio/video to prefetch if the cache is active
@@ -47,7 +47,7 @@ sub-font="Consolas"
 #"Cantarel"
 #"Ubuntu Mono"
 sub-font-size=36
-sub-color="#FFFFFFFF"
+sub-color= "#b3d9ff"   #"#FFFFFFFF"
 #sub-border-color="#FF262626"
 sub-border-size=0
 sub-shadow-offset=0
@@ -59,12 +59,12 @@ sub-spacing=0.5
 #############
 
 osd-level=1                             # enable osd and display --osd-status-msg on interaction
-osd-duration=2500                       # hide the osd after x ms
+osd-duration=1500                       # hide the osd after x ms
 osd-status-msg='${time-pos} / ${duration}${?percent-pos:　(${percent-pos}%)}${?frame-drop-count:${!frame-drop-count==0:　Dropped: ${frame-drop-count}}}\n${?chapter:Chapter: ${chapter}}'
 
 osd-font='Cantarell'
-osd-font-size=15
-osd-color='#CCFFFFFF'                   # ARGB format
+osd-font-size=22
+osd-color= '#3399ff'  #'#CCFFFFFF'                   # ARGB format
 osd-border-color='#DD322640'            # ARGB format
 #osd-shadow-offset=1                    # pixel width for osd text and progress bar
 osd-bar-align-y=1                       # progress bar y alignment (-1 top, 0 centered, 1 bottom)
