green color osd

--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -47,7 +47,7 @@ sub-font="Consolas"
 #"Cantarel"
 #"Ubuntu Mono"
 sub-font-size=36
-sub-color= "#b3d9ff"   #"#FFFFFFFF"
+sub-color= "#66FF33"   #"#b3d9ff"   #"#FFFFFFFF"
 #sub-border-color="#FF262626"
 sub-border-size=0
 sub-shadow-offset=0
@@ -64,7 +64,7 @@ osd-status-msg='${time-pos} / ${duration}${?percent-pos:　(${percent-pos}%)}${?
 
 osd-font='Cantarell'
 osd-font-size=22
-osd-color= '#3399ff'  #'#CCFFFFFF'                   # ARGB format
+osd-color="#66FF33" #'#3399ff'  #'#CCFFFFFF'                   # ARGB format
 osd-border-color='#DD322640'            # ARGB format
 #osd-shadow-offset=1                    # pixel width for osd text and progress bar
 osd-bar-align-y=1                       # progress bar y alignment (-1 top, 0 centered, 1 bottom)
