--- a/i3/config
+++ b/i3/config
@@ -205,7 +205,7 @@ bindsym XF86AudioMute exec "amixer -q sset Master,0 toggle"
 bar{
 	status_command  i3status 
 	position top
-	font pango:monaco bold  8
+	font pango:Monaco,Bold 11px
 	separator_symbol "   ●"
 	mode dock
 
