--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -57,20 +57,20 @@ sub-spacing=0.5
 #############
 # OSD / OSC #
 #############
+osc=no
+#osd-level=1                             # enable osd and display --osd-status-msg on interaction
+#osd-duration=1000                       # hide the osd after x ms
+#osd-status-msg='${time-pos} / ${duration}${?percent-pos:　(${percent-pos}%)}${?frame-drop-count:${!frame-drop-count==0:　Dropped: ${frame-drop-count}}}\n${?chapter:Chapter: ${chapter}}'
 
-osd-level=1                             # enable osd and display --osd-status-msg on interaction
-osd-duration=1000                       # hide the osd after x ms
-osd-status-msg='${time-pos} / ${duration}${?percent-pos:　(${percent-pos}%)}${?frame-drop-count:${!frame-drop-count==0:　Dropped: ${frame-drop-count}}}\n${?chapter:Chapter: ${chapter}}'
-
-osd-font='Cantarell'
-osd-font-size=22
-osd-color="#66FF33" #'#3399ff'  #'#CCFFFFFF'                   # ARGB format
-osd-border-color='#DD322640'            # ARGB format
+#osd-font='Cantarell'
+#osd-font-size=22
+#osd-color="#66FF33" #'#3399ff'  #'#CCFFFFFF'                   # ARGB format
+#osd-border-color='#DD322640'            # ARGB format
 #osd-shadow-offset=1                    # pixel width for osd text and progress bar
-osd-bar-align-y=1                       # progress bar y alignment (-1 top, 0 centered, 1 bottom)
-osd-border-size=0                       # size for osd text and progress bar
-osd-bar-h=0.1                             # height of osd bar as a fractional percentage of your screen height
-osd-bar-w=30                            # width of " " "
+#osd-bar-align-y=1                       # progress bar y alignment (-1 top, 0 centered, 1 bottom)
+#osd-border-size=0                       # size for osd text and progress bar
+#osd-bar-h=0.1                             # height of osd bar as a fractional percentage of your screen height
+#osd-bar-w=30                            # width of " " "
 
 
 
