--- a/i3/config
+++ b/i3/config
@@ -219,12 +219,13 @@ bar{
 		 #1BFF0F
 		 #00FA85
 
-							 #BORDER	 #BG		 #TEXT			
+				 #BORDER	 #BG		 #TEXT			
 				 
         active_workspace	  #777F8B	 #777F8B	 #ecedee
-        inactive_workspace	 #3f3f3f	 #3f3f3f	 #ecedee
-        focused_workspace	 #3f3f3f	 #3f3f3f	#00bfff      ##9DC0FC
+        inactive_workspace	 #3f3f3f	 #3f3f3f	 #999999
+	focused_workspace	 #3f3f3f	 #3f3f3f	#00bfff      
         urgent_workspace	 #DEDFE3	 #DEDFE3	 #767E8A       
+	
 	}
 
 }
