--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -53,7 +53,8 @@ sub-border-size=0
 sub-shadow-offset=0
 #sub-shadow-color="#33000000"
 sub-spacing=0.5
-
+sub-auto=fuzzy                          # external subs don't have to match the file name exactly to autoload
+sub-paths=ass:srt:sub:subs:subtitles    # search for external subs in the listed subdirectories
 #############
 # OSD / OSC #
 #############
