--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -75,4 +75,20 @@ osc=no
 
 
 
+###################################
+# Protocol Specific Configuration #
+###################################
 
+[protocol.https]
+cache=yes
+#cache-default=500000                    # size in KB
+#cache-backbuffer=250000                 # size in KB
+cache-secs=100                           # how many seconds of audio/video to prefetch
+user-agent='Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.7 Safari/537.36'
+
+[protocol.http]
+cache=yes
+#cache-default=500000                    # size in KB
+#cache-backbuffer=250000                 # size in KB
+cache-secs=100                           # how many seconds of audio/video to prefetch
+user-agent='Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.7 Safari/537.36'
