--- a/i3status/i3status.conf
+++ b/i3status/i3status.conf
@@ -22,7 +22,7 @@ wireless _first_ {
 	#	format_up = " [%essid ]"       
 	#	format_down = " [down]"
 	 format_up = "[  ]: On: %essid "   //(%quality at %essid) %ip"
-	 format_down = "[  ]  Wifi: down"
+	 format_down = ""  #"[  ]  Wifi: down"
 }
 
 ethernet enp4s0 {
