--- a/i3/config
+++ b/i3/config
@@ -1,12 +1,17 @@
 #--[i3 config file]-- #
 #-----------backgroung img----(+)----wifi-starting---------
 exec_always --no-startup-id  feh -g 1366x768  --recursive --randomize --bg-fill  /home/windy/Pictures/wallpapers/
-
 #::::mod touch:::::::
 set $mod Mod4
 
+
+#::::default Programs::::::::
+set $browser google-chrome-unstable
+set $terminal urxvt
+
+
 # font
-font pango:Monaco 9
+font pango:Monaco, 9
 
 
 #::Use Mouse+$mod to drag floating windows to their wanted position
@@ -21,8 +26,13 @@ bindsym $mod+q kill
 
 
 #::: start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run -i -fn 'Monaco-9:Bold:pixelsize=12' -nb '#3F3F3F' -nf '#15B3E8' -sf '#000000' -sb '#F2FA00'
+bindsym $mod+d exec dmenu_run -i -fn 'monaco-9:bold:pixelsize=12' -nb '#3F3F3F' -nf '#15B3E8' -sf '#000000' -sb '#F2FA00'
 
+#:::: change focus
+bindsym $mod+j focus left
+bindsym $mod+k focus down
+bindsym $mod+l focus up
+bindsym $mod+semicolon focus right
 
 # :::alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -30,9 +40,15 @@ bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
-#===========workspace prev-next===========
-bindsym $mod+Shift+Left workspace prev
-bindsym $mod+Shift+Right workspace next
+# move focused window
+bindsym $mod+Shift+Left move left
+bindsym $mod+Shift+Down move down
+bindsym $mod+Shift+Up move up
+bindsym $mod+Shift+Right move right
+
+
+bindsym $mod+Alt+Left workspace prev
+bindsym $mod+Alt+Right workspace next
 
 # split in horizontal orientation
 bindsym $mod+h split h
@@ -46,6 +62,8 @@ bindsym $mod+f fullscreen toggle
 #:::::::pop-ups for fullscreen
 popup_during_fullscreen smart
 
+#sticky
+#bindsym $mod+Shift+t sticky toggle
 
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
@@ -62,20 +80,22 @@ for_window [class="(?i)xterm"] floating enable
 for_window [class="(?i)feh"] floating enable
 
 
-
 # change focus between tiling / floating windows
 bindsym $mod+space focus mode_toggle
 
-#===========quick_back_and_forth_work_space
+#quick_back_and_forth_work_space
 workspace_auto_back_and_forth yes
 bindsym $mod+z workspace back_and_forth
-#==============brightness control===========
+
+#brightness control
 bindsym XF86MonBrightnessUp exec --no-startup-id sudo bright_Up
 bindsym XF86MonBrightnessDown exec --no-startup-id sudo bright_Down
-bindsym XF86Display exec --no-startup-id xset dpms force off
 
-#=========== focus the parent container=========
+
+bindsym XF86Display exec --no-startup-id xset dpms force off
+# focus the parent container
 bindsym $mod+a focus parent
+
 
 ######grouping workspaces+name####
 set $ws1 "1:"
@@ -89,15 +109,12 @@ set $ws8  "8:"
 set $ws9   "9:"
 set $ws10  "10:"
 
-
-#===========assinging to a work space============
 #assign [class="(?i)urxvt"] → $ws1
 assign [class="(?i)google-chrome-unstable"] → $ws2
 assign [class="(?i)mpv"] → $ws3
 assign [class="(?i)mupdf"] → $ws4
 assign [class="(?i)wireshark-gtk"] → $ws8
 assign [class="(?i)Tor Browser"] → $ws9
-#assign [class="(?!urxvt)"] → $ws1
 assign [class="^Tor Browser$" instance="^Navigator$"] → 3
 
 # switch to workspace
@@ -131,16 +148,10 @@ bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -f "pango:monaco 8 " -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+e exec "i3-nagbar -f 'pango:monaco 8' -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
-
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
         bindsym j resize shrink width 10 px or 10 ppt
         bindsym k resize grow height 10 px or 10 ppt
         bindsym l resize shrink height 10 px or 10 ppt
@@ -206,37 +217,34 @@ bindsym XF86AudioMute exec "amixer -q sset Master,0 toggle"
 bar{
 	status_command  i3status 
 	position top
-	font pango:Monaco,Bold 11px
+	font pango: Monaco bold 11px
 	separator_symbol "   ●"
 	mode dock
 
 	colors{
-		 separator   #ffff00  #<<both are yellow >>      
-		 background	#3F3F3F	  #<< grey >>   
-		 statusline    #00bfff      #<< deepBlue>>
-	
+	     separator   #ffff00  #<<both are yellow >> #dbff0f      
+		 background	#3f3f3f	  #<< grey >>   
+		 statusline    #00bfff   #00ace6
 
-				 #BORDER	 #BG		 #TEXT			
+							 #border	 #bg		 #text			
 				 
-        active_workspace	  #777F8B	 #777F8B	 #ecedee
-        inactive_workspace	 #3f3f3f	 #3f3f3f	 #999999
-	focused_workspace	 #3f3f3f	 #3f3f3f	#00bfff      
-        urgent_workspace	 #DEDFE3	 #DEDFE3	 #767E8A       
-	
+        active_workspace	  #777f8b	 #777f8b	  #99ccff
+       inactive_workspace	 #3f3f3f	 #3f3f3f	 #999999  
+      focused_workspace	 #3f3f3f	 #3f3f3f	#00bfff   
+     urgent_workspace	 #dedfe3	 #dedfe3	 #767e8a       
 	}
 
 }
 
 
-###########:::::::::::::::: MARCO DE VENTANA ::::::::::::::::::#
+###########:::::::::::::::: marco de ventana ::::::::::::::::::#
 #################################################################
 # class           		 border  backgr  text   indicator child_border 
-client.focused		 	#607d8b #607d8b #DFDFDF  #dddddd   #607d8b
+client.focused		 	#607d8b #607d8b #dfdfdf  #dddddd   #607d8b
 client.focused_inactive 	#263238 #263238 #9a9b9c  #111111   #263238
 client.unfocused 		#455a64 #455a64 #a1a1a1  #bfbfbf   #455a64	
 client.urgent   		#4a4b4c #4a4b4c #fdfdfd  #fbfbfb   #4a4c4b
 client.placeholder     		#000000 #0c0c0c #ffffff  #000000   #0c0c0c
 client.background       	#111111
-
 
 
