--- a/qutebrowser/qutebrowser.conf
+++ b/qutebrowser/qutebrowser.conf
@@ -328,7 +328,7 @@ message-unfocused = false
 confirm-quit = never
 zoom-text-only = false
 frame-flattening = false
-user-stylesheet = userstyle.css
+user-stylesheet = 
 hide-scrollbar = true
 css-media-type = 
 smooth-scrolling = false
@@ -1024,7 +1024,7 @@ enable-pdfjs = false
 #     Controls hiding unmatched hints in rapid mode.
 #     Valid values: true, false
 #     Default: true
-border = 1px solid #E3BE23
+border = 1px solid #ccffb3
 mode = letter
 chars = asdfghjkl
 min-chars = 1
@@ -1046,7 +1046,7 @@ hide-unmatched-rapid-hints = true
 # search term, e.g. `:open google qutebrowser`. The string `{}` will be
 # replaced by the search term, use `{{` and `}}` for literal `{`/`}`
 # signs.
-DEFAULT = https://duckduckgo.com/?q={}
+DEFAULT = https://google.com/?q={}
 
 [aliases]
 # Aliases for commands.
@@ -1375,9 +1375,9 @@ DEFAULT = https://duckduckgo.com/?q={}
 # prompts.selected.bg (QssColor):
 #     Background color for the selected item in filename prompts.
 #     Default: #308cc6
-completion.fg = white
-completion.bg = #333333
-completion.alternate-bg = #444444
+completion.fg = #CCCCCC
+completion.bg = #4C4C4C
+completion.alternate-bg = #4C4C4C
 completion.category.fg = white
 completion.category.bg = qlineargradient(x1:0, y1:0, x2:0, y2:1, stop:0 #888888, stop:1 #505050)
 completion.category.border.top = black
@@ -1389,8 +1389,8 @@ completion.item.selected.border.bottom = ${completion.item.selected.border.top}
 completion.match.fg = #ff4444
 completion.scrollbar.fg = ${completion.fg}
 completion.scrollbar.bg = ${completion.bg}
-statusbar.fg = white
-statusbar.bg = black
+statusbar.fg = #CCCCCC
+statusbar.bg = #4C4C4C
 statusbar.fg.insert = ${statusbar.fg}
 statusbar.bg.insert = darkgreen
 statusbar.fg.command = ${statusbar.fg}
@@ -1406,12 +1406,12 @@ statusbar.url.fg.success.https = lime
 statusbar.url.fg.error = orange
 statusbar.url.fg.warn = yellow
 statusbar.url.fg.hover = aqua
-tabs.fg.odd = white
-tabs.bg.odd = grey
-tabs.fg.even = white
-tabs.bg.even = darkgrey
-tabs.fg.selected.odd = white
-tabs.bg.selected.odd = black
+tabs.fg.odd = #CCCCCC
+tabs.bg.odd = #1A1A1A
+tabs.fg.even = #CCCCCC
+tabs.bg.even = #1A1A1A
+tabs.fg.selected.odd = #FFFF66
+tabs.bg.selected.odd = grey
 tabs.fg.selected.even = ${tabs.fg.selected.odd}
 tabs.bg.selected.even = ${tabs.bg.selected.odd}
 tabs.bg.bar = #555555
@@ -1421,7 +1421,7 @@ tabs.indicator.error = #ff0000
 tabs.indicator.system = rgb
 hints.fg = black
 hints.bg = qlineargradient(x1:0, y1:0, x2:0, y2:1, stop:0 rgba(255, 247, 133, 0.8), stop:1 rgba(255, 197, 66, 0.8))
-hints.fg.match = green
+hints.fg.match = #FFFF66
 downloads.bg.bar = black
 downloads.fg.start = white
 downloads.bg.start = #0000aa
@@ -1548,12 +1548,12 @@ prompts.selected.bg = #308cc6
 #     Font used for prompts.
 #     Default: 8pt sans-serif
 _monospace = monaco, Monospace, "DejaVu Sans Mono", Monaco, "Bitstream Vera Sans Mono", "Andale Mono", "Courier New", Courier, "Liberation Mono", monospace, Fixed, Consolas, Terminal
-completion = 8pt ${_monospace}
+completion = 9pt ${_monospace}
 completion.category = bold ${completion}
-tabbar = 8pt ${_monospace}
-statusbar = 8pt ${_monospace}
-downloads = 8pt ${_monospace}
-hints = bold 13px ${_monospace}
+tabbar = 9pt ${_monospace}
+statusbar = 9pt ${_monospace}
+downloads = 9pt ${_monospace}
+hints = bold 12px ${_monospace}
 debug-console = 8pt ${_monospace}
 web-family-standard = 
 web-family-fixed = 
