--- a/qutebrowser/qutebrowser.conf
+++ b/qutebrowser/qutebrowser.conf
@@ -681,7 +681,7 @@ mouse-zoom-divider = 512
 # indicator-padding (Padding):
 #     Padding for indicators (top, bottom, left, right).
 #     Default: 2,2,0,4
-background-tabs = false
+background-tabs = true
 select-on-remove = next
 new-tab-position = next
 new-tab-position-explicit = last
@@ -1025,7 +1025,6 @@ enable-pdfjs = false
 #     Valid values: true, false
 #     Default: true
 border = 1px solid #ccffb3
-opacity = 0.7
 mode = letter
 chars = asdfghjkl
 min-chars = 1
@@ -1047,7 +1046,7 @@ hide-unmatched-rapid-hints = true
 # search term, e.g. `:open google qutebrowser`. The string `{}` will be
 # replaced by the search term, use `{{` and `}}` for literal `{`/`}`
 # signs.
-DEFAULT =  https://www.google.com/search?hl=en&q={}
+DEFAULT = https://www.google.com/search?hl=en&q={}
 
 [aliases]
 # Aliases for commands.
@@ -1390,15 +1389,11 @@ completion.item.selected.border.bottom = ${completion.item.selected.border.top}
 completion.match.fg = #ff4444
 completion.scrollbar.fg = ${completion.fg}
 completion.scrollbar.bg = ${completion.bg}
-
 statusbar.fg = #CCCCCC
 statusbar.bg = #1a1a1a
 statusbar.fg.insert = ${statusbar.fg}
-statusbar.bg.insert = darkgreen
-statusbar.fg.command = #ff9900 
-
-#${statusbar.fg}
-
+statusbar.bg.insert = #000000
+statusbar.fg.command = #ff9900
 statusbar.bg.command = ${statusbar.bg}
 statusbar.fg.caret = ${statusbar.fg}
 statusbar.bg.caret = purple
@@ -1411,13 +1406,11 @@ statusbar.url.fg.success.https = lime
 statusbar.url.fg.error = orange
 statusbar.url.fg.warn = yellow
 statusbar.url.fg.hover = aqua
-
-
 tabs.fg.odd = #cccccc
 tabs.bg.odd = #4d4d4d
 tabs.fg.even = #cccccc
 tabs.bg.even = #4d4d4d
-tabs.fg.selected.odd =  #ffff4d
+tabs.fg.selected.odd = #ffff4d
 tabs.bg.selected.odd = #4d4d4d
 tabs.fg.selected.even = ${tabs.fg.selected.odd}
 tabs.bg.selected.even = ${tabs.bg.selected.odd}
@@ -1426,13 +1419,9 @@ tabs.indicator.start = #0000aa
 tabs.indicator.stop = #00aa00
 tabs.indicator.error = #ff0000
 tabs.indicator.system = rgb
-
-
 hints.fg = black
 hints.bg = qlineargradient(x1:0, y1:0, x2:0, y2:1, stop:0 rgba(255, 247, 133, 0.8), stop:1 rgba(255, 197, 66, 0.8))
 hints.fg.match = #FFFF66
-
-
 downloads.bg.bar = black
 downloads.fg.start = white
 downloads.bg.start = #0000aa
@@ -1442,12 +1431,10 @@ downloads.fg.system = rgb
 downloads.bg.system = rgb
 downloads.fg.error = white
 downloads.bg.error = red
-
 webpage.bg = white
 keyhint.fg = #FFFFFF
 keyhint.fg.suffix = #FFFF00
 keyhint.bg = rgba(0, 0, 0, 80%)
-
 messages.fg.error = white
 messages.bg.error = red
 messages.border.error = #bb0000
@@ -1457,8 +1444,6 @@ messages.border.warning = #d47300
 messages.fg.info = white
 messages.bg.info = black
 messages.border.info = #333333
-
-
 prompts.fg = white
 prompts.bg = darkblue
 prompts.selected.bg = #308cc6
@@ -1562,7 +1547,6 @@ prompts.selected.bg = #308cc6
 # prompts (Font):
 #     Font used for prompts.
 #     Default: 8pt sans-serif
-#_monospace = monaco,Consolas, "DejaVu Sans Mono", "Courier New", Courier, Fixed, Monospace,  Terminal
 _monospace = Consolas,Cantarell, Monaco,"DejaVu Sans Mono", Courier, monospace, Fixed, Terminal
 completion = 10pt "Ubuntu mono"
 completion.category = bold ${completion}
@@ -1571,10 +1555,10 @@ statusbar = 9pt ${_monospace} bold
 downloads = 9pt ${_monospace} bold
 hints = bold 12px ${_monospace}
 debug-console = 8pt ${_monospace}
-web-family-standard = "Times New Roman", Times, serif 
+web-family-standard = "Times New Roman", Times, serif
 web-family-fixed = 
 web-family-serif = "DejaVu Serif"
-web-family-sans-serif = "Dejavu Sans", "Courier New"
+web-family-sans-serif = Arial, "Dejavu Sans", "Courier New"
 web-family-cursive = 
 web-family-fantasy = 
 web-size-minimum = 
