--- a/qutebrowser/qutebrowser.conf
+++ b/qutebrowser/qutebrowser.conf
@@ -1445,7 +1445,7 @@ messages.fg.info = white
 messages.bg.info = black
 messages.border.info = #333333
 prompts.fg = white
-prompts.bg = darkblue
+prompts.bg = grey
 prompts.selected.bg = #308cc6
 
 [fonts]
